[video] fix(selectionInputModal): handle input focus & removed input border radius on ios (#194)

--- a/packages/plugin-video/statics/styles/video-selection-input-modal.scss
+++ b/packages/plugin-video/statics/styles/video-selection-input-modal.scss
@@ -46,6 +46,7 @@
 %video_modal_textInput {
   display: inline-block;
   input[type="url"] {
+    border-radius: 0px;
     @include phone {
       border-left: none;
       border-right: none;
